--- a/src/interfaces/VtnVistaEmpleado.form
+++ b/src/interfaces/VtnVistaEmpleado.form
@@ -127,6 +127,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="title" type="java.lang.String" value="Restaurant Esencia y Saz&#xf3;n"/>
     <Property name="undecorated" type="boolean" value="true"/>
   </Properties>
   <SyntheticProperties>
@@ -160,7 +161,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="0" y="0" width="1000" height="572"/>
+          <AbsoluteConstraints x="0" y="0" width="1000" height="580"/>
         </Constraint>
       </Constraints>
 
