--- a/src/interfaces/PanelDetalle.form
+++ b/src/interfaces/PanelDetalle.form
@@ -91,6 +91,7 @@
         </Property>
         <Property name="text" type="java.lang.String" value="1"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
+        <Property name="focusable" type="boolean" value="false"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[70, 25]"/>
         </Property>
